fix: navbar z-index

--- a/styles/global.css
+++ b/styles/global.css
@@ -25,6 +25,7 @@ nav {
     background: white;
     border-bottom: 1px solid #D9D9D9;
     height: 50px;
+    z-index: 1000;
 }
 
 .logo {
